--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #F5F5F5;
-}
 canvas {
   position: absolute;
   top: 0px;
@@ -8,5 +5,7 @@ canvas {
   left: 0px;
   right: 0px;
   margin: auto;
-  box-shadow: 2px 2px 10px #616161;
+  box-shadow: 2px 2px 10px white;
+  border-radius: 10px;
+  cursor: none;
 }
